--- a/ECS_Academia/content/customs/import-export/export/guide/1.1.data-structure.md
+++ b/ECS_Academia/content/customs/import-export/export/guide/1.1.data-structure.md
@@ -1,6 +1,5 @@
 ---
 linktitle: โครงสร้างข้อมูลใบขนสินค้า
-weight: 2
 title: โครงสร้างข้อมูลใบขนสินค้าขาออก
 date: "2020-05-09T00:00:00Z"
 lastmod: "2020-05-09T00:00:00Z"
@@ -10,7 +9,7 @@ type: docs  # Do not modify.
 
 menu:
   export:
-    parent: คู่มือพิธีการส่งออก
+    parent: 3. คู่มือพิธีการส่งออก
     weight: 20
 weight: 20
 ---
