--- a/ECS_Academia/content/customs/import-export/export/guide/1.guide.md
+++ b/ECS_Academia/content/customs/import-export/export/guide/1.guide.md
@@ -1,5 +1,5 @@
 ---
-linktitle: ภาพรวมการส่งออก
+linktitle: บทนำ
 title: คู่มือการปฏิบัติพิธีการศุลกากรสำหรับการส่งออก (e-Export)
 date: "2020-05-09T00:00:00Z"
 lastmod: "2020-05-09T00:00:00Z"
@@ -9,7 +9,7 @@ type: docs  # Do not modify.
 
 menu:
   export:
-    parent: คู่มือพิธีการส่งออก
+    parent: 3. คู่มือพิธีการส่งออก
     weight: 19
 weight: 19
 ---
