--- a/ECS_Academia/content/customs/import-export/export/guide/3.list-of-products.md
+++ b/ECS_Academia/content/customs/import-export/export/guide/3.list-of-products.md
@@ -12,7 +12,7 @@ type: docs  # Do not modify.
 # - weight: Position of link in menu.
 menu:
   export:
-    parent: คู่มือพิธีการส่งออก
+    parent: 3. คู่มือพิธีการส่งออก
     weight: 22
 weight: 22
 ---
