--- a/ECS_Academia/content/customs/import-export/export/guide/8.declaration-no.md
+++ b/ECS_Academia/content/customs/import-export/export/guide/8.declaration-no.md
@@ -9,7 +9,7 @@ type: docs  # Do not modify.
 
 menu:
   export:
-    parent: คู่มือพิธีการส่งออก
+    parent: 3. คู่มือพิธีการส่งออก
     weight: 27
 weight: 27
 ---
