--- a/ECS_Academia/content/customs/tax-incentive/guide/5.visitor-registration.md
+++ b/ECS_Academia/content/customs/tax-incentive/guide/5.visitor-registration.md
@@ -10,7 +10,7 @@ type: docs  # Do not modify.
 
 menu:
   tax-incentive:
-      parent: คู่มือสิทธิประโยชน์  
+      parent: 3. คู่มือสิทธิประโยชน์
       weight: 24
 
 weight: 24
