--- a/ECS_Academia/content/customs/tax-incentive/tranfer/1.main.md
+++ b/ECS_Academia/content/customs/tax-incentive/tranfer/1.main.md
@@ -1,21 +1,20 @@
 ---
-linktitle: การโอนย้ายของออกจากสิทธิประโยชน์
+linktitle: ภาพรวม
 # Page metadata.
-title: การโอนย้ายของออกจากสิทธิประโยชน์
+title: การโอนย้ายของสิทธิประโยชน์
 date: "2020-05-19T00:00:00Z"
 lastmod: "2020-05-19T00:00:00Z"
 draft: false  # Is this a draft? true/false
 toc: true # Show table of contents? true/false
 type: docs  # Do not modify.
 
-# Add menu entry to sidebar.
-# - name: Declare this menu item as a parent with ID `name`.
-# - weight: Position of link in menu.
+
 menu:
   tax-incentive:
-        name: การโอนย้ายของออกจากสิทธิประโยชน์  
-        weight: 30
-weight: 30
+    parent: 2. การโอนย้ายของออก  
+    weight: 40
+
+weight: 40
 ---
 
 
