--- a/ECS_Academia/content/customs/tax-incentive/tranfer/3.section_29.md
+++ b/ECS_Academia/content/customs/tax-incentive/tranfer/3.section_29.md
@@ -1,5 +1,5 @@
 ---
-linktitle: ขอคืนอากรตามมาตรา 29
+linktitle: จากสิทธิขอคืนอากรตามมาตรา 29
 # Page metadata.
 title: การโอนย้ายของออกจากสิทธิ ขอคืนอากรตามมาตรา 29
 date: "2020-05-19T00:00:00Z"
@@ -12,10 +12,10 @@ type: docs  # Do not modify.
 # - name: Declare this menu item as a parent with ID `name`.
 # - weight: Position of link in menu.
 menu:
-  tax-incentive.3:
-        parent: การโอนย้ายของออกจากสิทธิประโยชน์  
-        weight: 100
-weight: 100
+  tax-incentive:
+    parent: 2. การโอนย้ายของออก 
+    weight: 42
+weight: 42
 ---
 
 
