--- a/ECS_Academia/content/customs/tax-incentive/tranfer/5.Freezone.md
+++ b/ECS_Academia/content/customs/tax-incentive/tranfer/5.Freezone.md
@@ -1,5 +1,5 @@
 ---
-linktitle: เขตปลอดอากร (Freezone)
+linktitle: จากเขตปลอดอากร
 # Page metadata.
 title: การโอนย้ายของออกจากเขตปลอดอากร (Freezone)
 date: "2020-05-19T00:00:00Z"
@@ -8,14 +8,12 @@ draft: false  # Is this a draft? true/false
 toc: true # Show table of contents? true/false
 type: docs  # Do not modify.
 
-# Add menu entry to sidebar.
-# - name: Declare this menu item as a parent with ID `name`.
-# - weight: Position of link in menu.
+
 menu:
-  tax-incentive.3:
-        parent: การโอนย้ายของออกจากสิทธิประโยชน์  
-        weight: 120
-weight: 120
+  tax-incentive:
+   parent: 2. การโอนย้ายของออก   
+   weight: 44
+weight: 44
 ---
 
 
