--- a/ECS_Academia/content/customs/import-export/export/guide/10.goods-control-list-structure.md
+++ b/ECS_Academia/content/customs/import-export/export/guide/10.goods-control-list-structure.md
@@ -8,7 +8,7 @@ toc: true  # Show table of contents? true/false
 type: docs  # Do not modify.
 menu:
   export:
-    parent: คู่มือพิธีการส่งออก
+    parent: 3. คู่มือพิธีการส่งออก
     weight: 29
 weight: 29
 ---
