--- a/ECS_Academia/content/customs/import-export/export/guide/4.part-4.md
+++ b/ECS_Academia/content/customs/import-export/export/guide/4.part-4.md
@@ -1,6 +1,6 @@
 ---
-linktitle: ภาค 4 ของที่ได้รับยกเว้นอากร
-title: ภาค 4 ของที่ได้รับยกเว้นอากร
+linktitle: ภาค4 ของที่ได้รับยกเว้นอากร
+title: ภาค4 ของที่ได้รับยกเว้นอากร
 date: "2020-05-09T00:00:00Z"
 lastmod: "2020-05-09T00:00:00Z"
 draft: false  # Is this a draft? true/false
@@ -9,7 +9,7 @@ type: docs  # Do not modify.
 
 menu:
   export:
-    parent: คู่มือพิธีการส่งออก
+    parent: 3. คู่มือพิธีการส่งออก
     weight: 23
 weight: 23
 ---
@@ -49,8 +49,8 @@ weight: 23
 
 ## 18 ภาค 4 สิทธิ์ Re-Export
 
-{{% alert note_danger %}}
-**ข้อควรระวัง**
+{{% alert danger %}}
+*ข้อควรระวัง*
 
 ไม่ใช่สิทธิคืนอากรขาเข้า ตามมาตรา 28  (Re-Export) ซึ่งมีเงื่อนไขต้องส่งกลับออกไปนอกราชอาณาจักรทั้งฉบับ และส่งออกภายใน *1 ปี* นับแต่วันที่นำของนั้นเข้ามาในราชอาณาจักร โดยให้ **ชำระค่าภาษีอากรหนึ่งใน 10 หรือไม่เกิน 1,000 บาท** _ต่อใบขนสินค้าขาเข้า_ 
 {{% /alert %}}
