--- a/ECS_Academia/content/customs/tax-incentive/guide/1.guide.md
+++ b/ECS_Academia/content/customs/tax-incentive/guide/1.guide.md
@@ -11,7 +11,7 @@ type: docs  # Do not modify.
 
 menu:
   tax-incentive:
-      parent: คู่มือสิทธิประโยชน์   
+      parent: 3. คู่มือสิทธิประโยชน์   
       weight: 20
 
 weight: 20
