--- a/ECS_Academia/content/customs/tax-incentive/tranfer/2.bond.md
+++ b/ECS_Academia/content/customs/tax-incentive/tranfer/2.bond.md
@@ -1,5 +1,5 @@
 ---
-linktitle: คลังสินค้าทัณฑ์บน.
+linktitle: จากคลังสินค้าทัณฑ์บน 
 # Page metadata.
 title: การโอนย้ายของออกจากคลังสินค้าทัณฑ์บน 
 date: "2020-05-19T00:00:00Z"
@@ -8,14 +8,11 @@ draft: false  # Is this a draft? true/false
 toc: true # Show table of contents? true/false
 type: docs  # Do not modify.
 
-# Add menu entry to sidebar.
-# - name: Declare this menu item as a parent with ID `name`.
-# - weight: Position of link in menu.
 menu:
-  tax-incentive.3:
-        parent: การโอนย้ายของออกจากสิทธิประโยชน์  
-        weight: 90
-weight: 90
+  tax-incentive:
+      parent: 2. การโอนย้ายของออก 
+      weight: 41
+weight: 41
 ---
 
 
