--- a/ECS_Academia/content/customs/tax-incentive/tranfer/4.BOI.md
+++ b/ECS_Academia/content/customs/tax-incentive/tranfer/4.BOI.md
@@ -1,5 +1,5 @@
 ---
-linktitle: ส่งเสริมการลงทุน BOI.
+linktitle: จากสิทธิส่งเสริมการลงทุน
 # Page metadata.
 title: การโอนย้ายของออกจากสิทธิ ส่งเสริมการลงทุน BOI
 date: "2020-05-19T00:00:00Z"
@@ -12,10 +12,10 @@ type: docs  # Do not modify.
 # - name: Declare this menu item as a parent with ID `name`.
 # - weight: Position of link in menu.
 menu:
-  tax-incentive.3:
-        parent: การโอนย้ายของออกจากสิทธิประโยชน์  
-        weight: 110
-weight: 110
+  tax-incentive:
+    parent: 2. การโอนย้ายของออก 
+    weight: 43
+weight: 43
 ---
 
 
