--- a/ECS_Academia/content/customs/tax-incentive/tranfer/6.i-eat.md
+++ b/ECS_Academia/content/customs/tax-incentive/tranfer/6.i-eat.md
@@ -1,5 +1,5 @@
 ---
-linktitle: เขตประกอบการเสรี (I-EAT)
+linktitle: จากเขตประกอบการเสรี
 # Page metadata.
 title: การโอนย้ายของออกจากเขตประกอบการเสรี (I-EAT)
 date: "2020-05-19T00:00:00Z"
@@ -8,14 +8,11 @@ draft: false  # Is this a draft? true/false
 toc: true # Show table of contents? true/false
 type: docs  # Do not modify.
 
-# Add menu entry to sidebar.
-# - name: Declare this menu item as a parent with ID `name`.
-# - weight: Position of link in menu.
 menu:
-  tax-incentive.3:
-        parent: การโอนย้ายของออกจากสิทธิประโยชน์  
-        weight: 130
-weight: 130
+  tax-incentive:
+   parent: 2. การโอนย้ายของออก 
+   weight: 45
+weight: 45
 ---
 
 ![enter image description here](https://github.com/yosarawut/KnowledgeCenter/raw/master/img/e-tax-incentive/tranfer-i-eat-2.jpg)
