--- a/ECS_Academia/content/customs/tax-incentive/tranfer/1.main.md
+++ b/ECS_Academia/content/customs/tax-incentive/tranfer/1.main.md
@@ -19,8 +19,8 @@ weight: 40
 
 
 
--   [คลังสินค้าทัณฑ์บน](bond/)
--   [ขอคืนอากรตามมาตรา 29](section_29/)
--   [ส่งเสริมการลงทุน BOI](boi/)
--   [เขตปลอดอากร (Freezone)](freezone/)  
--   [เขตประกอบการเสรี (I-EAT)](i-eat/)
+-   [คลังสินค้าทัณฑ์บน](../2.bond/)
+-   [ขอคืนอากรตามมาตรา 29](../3.section_29/)
+-   [ส่งเสริมการลงทุน BOI](../4.boi/)
+-   [เขตปลอดอากร (Freezone)](../5.freezone/)  
+-   [เขตประกอบการเสรี (I-EAT)](../6.i-eat/)
