--- a/ECS_Academia/content/customs/import-export/export/guide/5.tax-incentives.md
+++ b/ECS_Academia/content/customs/import-export/export/guide/5.tax-incentives.md
@@ -4,7 +4,7 @@ title: สิทธิประโยชน์ทางภาษีอากร
 date: "2020-05-09T00:00:00Z"
 lastmod: "2020-05-09T00:00:00Z"
 draft: false  # Is this a draft? true/false
-toc: true  # Show table of contents? true/false
+toc: false  # Show table of contents? true/false
 type: docs  # Do not modify.
 
 menu:
@@ -14,6 +14,7 @@ menu:
 weight: 24
 ---
 
+{{< collapsible "Re-Export" >}}
 
 ## Re-Export   
 
@@ -26,11 +27,11 @@ weight: 24
 - Declaration NO = เลขที่ใบขนสินค้าขาเข้าที่อ้างถึง ซึ่งนําของเข้ามาตามมาตรา 28
 - Declaration Line Number = รายการในใบขนสินค้าขาเข้าที่อ้างถึง
 
-----------
+{{< /collapsible >}}
 
+{{< collapsible "ขอคืนอากรตามมาตรา 29" >}}
 
 ## ขอคืนอากรตามมาตรา 29 
-
 
 - Export Tax Incentives ID = เลขทะเบียนผู้ใช้สิทธิประโยชน์ทางภาษีอากรที่นําของออก (ใน
 ส่วนของ Export Decalration Detail)
@@ -42,7 +43,9 @@ weight: 24
 - Model Version = เวอร์ชันของสูตรการผลิต
 - Model Company Tax Number = เลขประจําตัวผู้เสียภาษีอากรของบริษัทผู้ยื่นสูตร
 
-----------
+{{< /collapsible >}}
+
+{{< collapsible "คลังสินค้าทัณฑ์บน" >}}
 
 ## คลังสินค้าทัณฑ์บน
 
@@ -65,7 +68,9 @@ weight: 24
 - Model Version = เวอร์ชันของสูตรการผลิต
 - Model Company Tax Number = เลขประจําตัวผู้เสียภาษีอากรของบริษัทผู้ยื่นสูตร
 
-----------
+{{< /collapsible >}}
+
+{{< collapsible "เขตปลอดอากร (Free Zone)" >}}
 
 ## เขตปลอดอากร (Free Zone)
 
@@ -82,7 +87,9 @@ weight: 24
 - Export Tariff = 9PART3
 - Tariff Code = บันทึกพิกัดศุลกากรให้ตรงกับชนิดของของที่ส่งออก
 
-----------
+{{< /collapsible >}}
+
+{{< collapsible "เขตประกอบการเสรี (I-EAT)" >}}
 
 
 ## เขตประกอบการเสรี (I-EAT)
@@ -100,7 +107,9 @@ weight: 24
 - Export Tariff = 9PART3
 - Tariff Code = บันทึกพิกัดศุลกากรให้ตรงกับชนิดของของที่ส่งออก
 
-----------
+{{< /collapsible >}}
+
+{{< collapsible "ชดเชยค่าภาษีอากร" >}}
 
 ## ชดเชยค่าภาษีอากร
 
@@ -110,7 +119,9 @@ weight: 24
 - Export Tariff = 9PART3
 - Tariff Code = บันทึกพิกัดศุลกากรให้ตรงกับชนิดของของที่ส่งออก
 
-----------
+{{< /collapsible >}}
+
+{{< collapsible "ส่งเสริมการลงทุน BOI" >}}
 
 ## ส่งเสริมการลงทุน BOI 
 
@@ -123,4 +134,4 @@ weight: 24
 - กรณีมีการโอนสิทธิ์ BOI ให้ใช้สําเนาใบขนสินค้าขาออกฉบับพิมพ์จากผู้ส่งของออกโดยระบุวันที่
 รับบรรทุก (Load Date) พร้อมแสดงรายการการโอนสิทธิ์ BOI ด้วย
 
-----------
+{{< /collapsible >}}
