--- a/ECS_Academia/content/customs/tax-incentive/tranfer/4.BOI.md
+++ b/ECS_Academia/content/customs/tax-incentive/tranfer/4.BOI.md
@@ -23,6 +23,13 @@ weight: 43
 
 # โอนย้ายของเข้าโดยใช้สิทธิ์
 
+-   [คลังสินค้าทัณฑ์บน](#%E0%B8%84%E0%B8%A5-%E0%B8%87%E0%B8%AA-%E0%B8%99%E0%B8%84-%E0%B8%B2%E0%B8%97-%E0%B8%93%E0%B8%91-%E0%B8%9A%E0%B8%99)
+-   [ขอคืนอากรตามมาตรา 29](#%E0%B8%82%E0%B8%AD%E0%B8%84-%E0%B8%99%E0%B8%AD%E0%B8%B2%E0%B8%81%E0%B8%A3%E0%B8%95%E0%B8%B2%E0%B8%A1%E0%B8%A1%E0%B8%B2%E0%B8%95%E0%B8%A3%E0%B8%B2-29)
+-   [ส่งเสริมการลงทุน BOI](#%E0%B8%AA-%E0%B8%87%E0%B9%80%E0%B8%AA%E0%B8%A3-%E0%B8%A1%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%A5%E0%B8%87%E0%B8%97-%E0%B8%99-boi)
+-   [เขตปลอดอากร (Freezone)](#%E0%B9%80%E0%B8%82%E0%B8%95%E0%B8%9B%E0%B8%A5%E0%B8%AD%E0%B8%94%E0%B8%AD%E0%B8%B2%E0%B8%81%E0%B8%A3-freezone)
+-   [เขตประกอบการเสรี (I-EAT)](#%E0%B9%80%E0%B8%82%E0%B8%95%E0%B8%9B%E0%B8%A3%E0%B8%B0%E0%B8%81%E0%B8%AD%E0%B8%9A%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B9%80%E0%B8%AA%E0%B8%A3-i-eat)
+-   [เพื่อชำระภาษีอากรบริโภคในประเทศ](#%E0%B9%80%E0%B8%9E-%E0%B8%AD%E0%B8%8A%E0%B8%B3%E0%B8%A3%E0%B8%B0%E0%B8%A0%E0%B8%B2%E0%B8%A9-%E0%B8%AD%E0%B8%B2%E0%B8%81%E0%B8%A3%E0%B8%9A%E0%B8%A3-%E0%B9%82%E0%B8%A0%E0%B8%84%E0%B9%83%E0%B8%99%E0%B8%9B%E0%B8%A3%E0%B8%B0%E0%B9%80%E0%B8%97%E0%B8%A8)
+
 ## คลังสินค้าทัณฑ์บน
 
 **การโอนย้ายของออกจากสิทธิประโยชน์ส่งเสริมการลงทุน (BOI) เพื่อโอนย้ายของเข้าไปใช้สิทธิ์คลังสินค้าทัณฑ์บน**
