--- a/ECS_Academia/content/customs/tax-incentive/tranfer/2.bond.md
+++ b/ECS_Academia/content/customs/tax-incentive/tranfer/2.bond.md
@@ -20,11 +20,22 @@ weight: 41
 
 # โอนย้ายของเข้าโดยใช้สิทธิ์
 
+{{<hint info>}}
+
+-   [คลังสินค้าทัณฑ์บน](#%E0%B8%84%E0%B8%A5-%E0%B8%87%E0%B8%AA-%E0%B8%99%E0%B8%84-%E0%B8%B2%E0%B8%97-%E0%B8%93%E0%B8%91-%E0%B8%9A%E0%B8%99)
+-   [ขอคืนอากรตามมาตรา 29](#%E0%B8%82%E0%B8%AD%E0%B8%84-%E0%B8%99%E0%B8%AD%E0%B8%B2%E0%B8%81%E0%B8%A3%E0%B8%95%E0%B8%B2%E0%B8%A1%E0%B8%A1%E0%B8%B2%E0%B8%95%E0%B8%A3%E0%B8%B2-29)
+-   [ส่งเสริมการลงทุน BOI](#%E0%B8%AA-%E0%B8%87%E0%B9%80%E0%B8%AA%E0%B8%A3-%E0%B8%A1%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%A5%E0%B8%87%E0%B8%97-%E0%B8%99-boi)
+-   [เขตปลอดอากร (Freezone)](#%E0%B9%80%E0%B8%82%E0%B8%95%E0%B8%9B%E0%B8%A5%E0%B8%AD%E0%B8%94%E0%B8%AD%E0%B8%B2%E0%B8%81%E0%B8%A3-freezone)
+-   [เขตประกอบการเสรี (I-EAT)](#%E0%B9%80%E0%B8%82%E0%B8%95%E0%B8%9B%E0%B8%A3%E0%B8%B0%E0%B8%81%E0%B8%AD%E0%B8%9A%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B9%80%E0%B8%AA%E0%B8%A3-i-eat)
+-   [เพื่อชำระภาษีอากรบริโภคในประเทศ](#%E0%B9%80%E0%B8%9E-%E0%B8%AD%E0%B8%8A%E0%B8%B3%E0%B8%A3%E0%B8%B0%E0%B8%A0%E0%B8%B2%E0%B8%A9-%E0%B8%AD%E0%B8%B2%E0%B8%81%E0%B8%A3%E0%B8%9A%E0%B8%A3-%E0%B9%82%E0%B8%A0%E0%B8%84%E0%B9%83%E0%B8%99%E0%B8%9B%E0%B8%A3%E0%B8%B0%E0%B9%80%E0%B8%97%E0%B8%A8)
+
+{{< /hint>}}
+
 ## คลังสินค้าทัณฑ์บน
 
 **การโอนย้ายของออกจากคลังสินค้าทัณฑ์บน เพื่อโอนย้ายของเข้าโดยใช้สิทธิ์คลังสินค้าทัณฑ์บน** 
-  
-1. *ผู้ส่งออกของ* ส่งใบขนสินค้าขาออกโอนย้ายภายในประเทศ *(B)* ให้ระบุค่าดังนี้  
+ {{<hint success>}} 
+*ผู้ส่งออกของ* ส่งใบขนสินค้าขาออกโอนย้ายภายในประเทศ *(B)* ให้ระบุค่าดังนี้  
    
    - ระบุ Release Port = รหัสสถานที่ตรวจปล่อยของคลังสินค้าทัณฑ์ที่นำออก ที่ส่วนควบคุมในใบขนสินค้า  
    - ระบุ Load Port = รหัสสถานที่รับบรรทุกของของคลังสินค้าทัณฑ์ที่นำออก ที่ส่วนควบคุมในใบขนสินค้า  
@@ -32,20 +43,23 @@ weight: 41
    - ระบุ Bond = Y ที่ส่วนรายการในใบขนสินค้า  
    - ระบุ Import Tax Incentives ID = เลขที่ทะเบียนสิทธิ์ประโยชน์คลังสินค้าทัณฑ์บนที่นำของเข้า ที่ส่วนรายการในใบขนสินค้า  
    - กรณีมีสูตรการผลิต ระบุเลขที่สูตรการผลิต (Model Number) เวอร์ชั่นของสูตรการผลิต (ModelVersion) และเลขประจำตัวผู้เสียภาษีอากรของบริษัทผู้ยื่นสูตรการผลิต (Model Company Tax Number) ด้วย  
-
-2. *ผู้นำของเข้า* ส่งใบขนสินค้าขาเข้าโอนย้ายภายในประเทศ *(A)* ให้ระบุค่าดังนี้  
+{{< /hint>}}
+ {{<hint warning>}} 
+*ผู้นำของเข้า* ส่งใบขนสินค้าขาเข้าโอนย้ายภายในประเทศ *(A)* ให้ระบุค่าดังนี้  
    
    - ระบุ Release Port = รหัสสถานที่ตรวจปล่อยของคลังสินค้าทัณฑ์ที่นำออก ที่ส่วนควบคุมในใบขนสินค้า  
    - ระบุ Discharge Port = รหัสสถานที่รับบรรทุกของของคลังสินค้าทัณฑ์ที่นำออก ที่ส่วนควบคุมในใบขนสินค้า  
    - ระบุ Export Tax Incentives ID = เลขที่ทะเบียนสิทธิ์ประโยชน์คลังสินค้าทัณฑ์บนที่นำของออกที่ส่วนควบคุมในใบขนสินค้า  
    - ระบุ Bond = Y ที่ส่วนรายการในใบขนสินค้า  
    - ระบุ Import Tax Incentives ID = เลขที่ทะเบียนสิทธิ์ประโยชน์คลังสินค้าทัณฑ์บนที่นำของเข้า ที่ส่วนรายการในใบขนสินค้า
+{{< /hint>}}
 
 ## ขอคืนอากรตามมาตรา 29
 
 **การโอนย้ายของออกจากคลังสินค้าทัณฑ์บน เพื่อโอนย้ายของเข้าโดยใช้สิทธิ์ขอคืนอากรตามมาตรา 29**
 
-1. *ผู้ส่งออกของ* ส่งใบขนสินค้าขาออกโอนย้ายภายในประเทศ *(B)* ให้ระบุค่าดังนี้
+ {{<hint success>}} 
+*ผู้ส่งออกของ* ส่งใบขนสินค้าขาออกโอนย้ายภายในประเทศ *(B)* ให้ระบุค่าดังนี้
 
    - ระบุ Release Port = รหัสสถานที่ตรวจปล่อยของคลังสินค้าทัณฑ์ที่นำออก ที่ส่วนควบคุมในใบขนสินค้า
    - ระบุ Load Port = รหัสสถานที่รับบรรทุกของของคลังสินค้าทัณฑ์บนที่นำออก ที่ส่วนควบคุมในใบขนสินค้า
@@ -54,48 +68,63 @@ weight: 41
    - ระบุ Import Tax Incentives ID = เลขที่ทะเบียนสิทธิ์ประโยชน์ขอคืนอากรตามมาตรา 29ที่นำของเข้า ที่ส่วนรายการใน
 ใบขนสินค้า
    - กรณีมีสูตรการผลิต ระบุเลขที่สูตรการผลิต (Model Number) เวอร์ชั่นของสูตรการผลิต (Model Version) และเลขประจำตัวผู้เสียภาษีอากรของบริษัทผู้ยื่นสูตรการผลิต (Model Company Tax Number) ด้วย
-	
-1. *ผู้นำของเข้า* ส่งใบขนสินค้าขาเข้าโอนย้ายภายในประเทศ *(A)* ให้ระบุค่าดังนี้
+{{< /hint>}}
+
+ {{<hint warning>}} 
+
+*ผู้นำของเข้า* ส่งใบขนสินค้าขาเข้าโอนย้ายภายในประเทศ *(A)* ให้ระบุค่าดังนี้
 
    - ระบุ Release Port = รหัสสถานที่ตรวจปล่อยของคลังสินค้าทัณฑ์บนที่นำออก
    - ระบุ Discharge Port = รหัสสถานที่รับบรรทุกของของคลังสินค้าทัณฑ์บนที่นำออก
    - ระบุ Export Tax Incentives ID = เลขที่ทะเบียนสิทธิ์ประโยชน์คลังสินค้าทัณฑ์บนที่นำของออก ที่ส่วนควบคุมในใบขนสินค้า
    - ระบุ Drawback = Y ที่ส่วนรายการในใบขนสินค้า
    - ระบุ Import Tax Incentives ID = เลขที่ทะเบียนสิทธิ์ประโยชน์ขอคืนอากรตามมาตรา 29
+{{< /hint>}}
 
 ## ส่งเสริมการลงทุน BOI
 
 **การโอนย้ายของออกจากคลังสินค้าทัณฑ์บน เพื่อโอนย้ายของเข้าโดยใช้สิทธิ์ส่งเสริมการลงทุน BOI**
 
-1. *ผู้ส่งออกของ* ส่งใบขนสินค้าขาออกโอนย้ายภายในประเทศ *(B)* ให้ระบุค่าดังนี้
-	- ระบุ Release Port = รหัสสถานที่ตรวจปล่อยของคลังสินค้าทัณฑ์บนที่นำออก ที่ส่วนควบคุมในใบขนสินค้า
-	- ระบุ Load Port = รหัสสถานที่รับบรรทุกของของคลังสินค้าทัณฑ์บนที่นำออก ที่ส่วนควบคุมในใบขนสินค้า
-	- ระบุ Export Tax Incentives ID = เลขที่ทะเบียนสิทธิ์ประโยชน์คลังสินค้าทัณฑ์บนที่นำของออกที่ส่วนควบคุมในใบขนสินค้า
-	- ระบุ Bond = Y ที่ส่วนรายการในใบขนสินค้า
-	- กรณีมีสูตรการผลิต ระบุเลขที่สูตรการผลิต (Model Number) เวอร์ชั่นของสูตรการผลิต (ModelVersion) และเลขประจำตัวผู้เสียภาษีอากรของบริษัทผู้ยื่นสูตรการผลิต (Model Company Tax Number) ด้วย
-	
-2. *ผู้นำของเข้า* ส่งใบขนสินค้าขาเข้าโอนย้ายภายในประเทศ *(A)* ให้ระบุค่าดังนี้
-	- ระบุ Release Port = รหัสสถานที่ตรวจปล่อยของคลังสินค้าทัณฑ์บนที่นำออก
-	- ระบุ Discharge Port = รหัสสถานที่รับบรรทุกของของคลังสินค้าทัณฑ์บนที่นำออก
-	- ระบุ Export Tax Incentives ID = เลขที่ทะเบียนสิทธิ์ประโยชน์คลังสินค้าทัณฑ์บนที่นำของออกที่ส่วนควบคุมในใบขนสินค้า
-	- ระบุ BOI = Y ที่ส่วนรายการในใบขนสินค้า
-	- ระบุ เลขที่บัตรส่งเสริมการลงทุน BOI ในช่อง BOI License Number ที่ส่วนรายการในใบขนสินค้า
-	- Privilege Code = 000 ตามอัตราปกติ หรือ 999 ตามพระราชกำหนด เท่านั้น
-	- ระบุเลขที่อนุมัติสั่งปล่อยของ BOI ส่วนใบอนุญาต
+ {{<hint success>}}
+
+*ผู้ส่งออกของ* ส่งใบขนสินค้าขาออกโอนย้ายภายในประเทศ *(B)* ให้ระบุค่าดังนี้  
+
+- ระบุ Release Port = รหัสสถานที่ตรวจปล่อยของคลังสินค้าทัณฑ์บนที่นำออก ที่ส่วนควบคุมในใบขนสินค้า
+- ระบุ Load Port = รหัสสถานที่รับบรรทุกของของคลังสินค้าทัณฑ์บนที่นำออก ที่ส่วนควบคุมในใบขนสินค้า
+- ระบุ Export Tax Incentives ID = เลขที่ทะเบียนสิทธิ์ประโยชน์คลังสินค้าทัณฑ์บนที่นำของออกที่ส่วนควบคุมในใบขนสินค้า
+- ระบุ Bond = Y ที่ส่วนรายการในใบขนสินค้า
+- กรณีมีสูตรการผลิต ระบุเลขที่สูตรการผลิต (Model Number) เวอร์ชั่นของสูตรการผลิต (ModelVersion) และเลขประจำตัวผู้เสียภาษีอากรของบริษัทผู้ยื่นสูตรการผลิต (Model Company Tax Number) ด้วย
+{{< /hint>}}
+
+ {{<hint warning>}}
+
+*ผู้นำของเข้า* ส่งใบขนสินค้าขาเข้าโอนย้ายภายในประเทศ *(A)* ให้ระบุค่าดังนี้
+
+- ระบุ Release Port = รหัสสถานที่ตรวจปล่อยของคลังสินค้าทัณฑ์บนที่นำออก
+- ระบุ Discharge Port = รหัสสถานที่รับบรรทุกของของคลังสินค้าทัณฑ์บนที่นำออก
+- ระบุ Export Tax Incentives ID = เลขที่ทะเบียนสิทธิ์ประโยชน์คลังสินค้าทัณฑ์บนที่นำของออกที่ส่วนควบคุมในใบขนสินค้า
+- ระบุ BOI = Y ที่ส่วนรายการในใบขนสินค้า
+- ระบุ เลขที่บัตรส่งเสริมการลงทุน BOI ในช่อง BOI License Number ที่ส่วนรายการในใบขนสินค้า
+- Privilege Code = 000 ตามอัตราปกติ หรือ 999 ตามพระราชกำหนด เท่านั้น
+- ระบุเลขที่อนุมัติสั่งปล่อยของ BOI ส่วนใบอนุญาต
 	- การชำระอากร ให้ระบุ Exemption Rate = ตามที่ BOI อนุมัติให้ เช่น
-		* ยกเว้นอากร ให้บันทึก Exemption Rate = 100
-		* ลดเหลือกึ่งหนึ่ง ให้บันทึก Exemption Rate = 50
-		* ลดเหลือร้อยละ 5 ให้บันทึก Exemption Rate = 95
-    - การวางประกัน ให้ระบุรหัสเหตุผลการวางประกันมาในช่อง Deposit Reason Code (D10) ที่ส่วนรายการในใบขนสินค้า 
+	* ยกเว้นอากร ให้บันทึก Exemption Rate = 100
+	* ลดเหลือกึ่งหนึ่ง ให้บันทึก Exemption Rate = 50
+	* ลดเหลือร้อยละ 5 ให้บันทึก Exemption Rate = 95
+- การวางประกัน ให้ระบุรหัสเหตุผลการวางประกันมาในช่อง Deposit Reason Code (D10) ที่ส่วนรายการในใบขนสินค้า 
 (Deposit) ระบุจำนวนเงินวางประกันมาในช่อง Deposit Amount ที่ส่วนรายการในใบขนสินค้า (Duty) และที่ส่วนรายการในใบขนสินค้า (Deposit)
-		* อากรศุลกากร ให้ระบุยอดวางประกัน ตามที่ BOI อนุมัติให้ 
-		* VAT ให้ระบุยอดวางประกัน ตามที่ BOI อนุมัติให้ 
-		
->– *ภาษีสรรพสามิตและภาษีเพื่อมหาดไทย ต้องชำระเต็ม เท่านั้น*
+	* อากรศุลกากร ให้ระบุยอดวางประกัน ตามที่ BOI อนุมัติให้ 
+	* VAT ให้ระบุยอดวางประกัน ตามที่ BOI อนุมัติให้ 
+{{< /hint>}}
+ {{<hint danger>}} 	
+*ภาษีสรรพสามิตและภาษีเพื่อมหาดไทย ต้องชำระเต็ม เท่านั้น*
+{{< /hint>}}
 
 ## เขตปลอดอากร (Freezone)
 
 **การโอนย้ายของออกจากคลังสินค้าทัณฑ์บน เพื่อโอนย้ายของเข้าโดยใช้สิทธิ์เขตปลอดอากร**
+
+ {{<hint success>}} 
 
 *ผู้ส่งออกของ* ส่งใบขนสินค้าขาออกโอนย้ายเข้าเขตปลอดอากร *(D)* ให้ระบุค่าดังนี้
 
@@ -106,10 +135,13 @@ weight: 41
 - กรณีมีสูตรการผลิต ระบุเลขที่สูตรการผลิต (Model Number) เวอร์ชั่นของสูตรการผลิต (Model Version) และเลขประจำตัวผู้
 เสียภาษีอากรของบริษัทผู้ยื่นสูตรการผลิต (Model Company Tax Number) ด้วย
 - ระบุ Import Tax Incentives ID = เลขที่ทะเบียนสิทธิ์ประโยชน์ผู้ได้รับใบอนุญาตประกอบกิจการในเขตปลอดอากรที่นำของเข้า ที่ส่วนรายการในใบขนสินค้า
+{{< /hint>}}
 
 ## เขตประกอบการเสรี (I-EAT)
 
 **การโอนย้ายของออกจากคลังสินค้าทัณฑ์บน เพื่อโอนย้ายของเข้าโดยใช้สิทธิ์เขตประกอบการเสรี**
+
+ {{<hint success>}} 
 
 *ผู้ส่งออกของ* ส่งใบขนสินค้าขาออกโอนย้ายเข้าเขตประกอบการเสรี *(D)* ให้ระบุค่าดังนี้
 
@@ -119,11 +151,13 @@ weight: 41
 - ระบุ Bond = Y ที่ส่วนรายการในใบขนสินค้า
 - กรณีมีสูตรการผลิต ระบุเลขที่สูตรการผลิต (Model Number) เวอร์ชั่นของสูตรการผลิต (Model Version) และเลขประจำตัวผู้เสียภาษีอากรของบริษัทผู้ยื่นสูตรการผลิต (Model Company Tax Number) ด้วย
 - ระบุ Import Tax Incentives ID = เลขที่ทะเบียนสิทธิ์ประโยชน์ผู้ประกอบการในเขตประกอบการเสรีที่นำของเข้า ที่ส่วนรายการในใบขนสินค้า
+{{< /hint>}}
 
 ## เพื่อชำระภาษีอากรบริโภคในประเทศ
 
 **การโอนย้ายของออกจากคลังสินค้าทัณฑ์บน เพื่อชำระภาษีอากรบริโภคในประเทศ**
 
+ {{<hint warning>}}
 *ผู้นำของเข้า* ส่งใบขนสินค้าขาเข้าโอนย้ายชำระค่าภาษีอากร *P* ให้ระบุค่าดังนี้
 
 - ระบุ Release Port = รหัสสถานที่ตรวจปล่อยของคลังสินค้าทัณฑ์บนที่นำออก ที่ส่วนควบคุมในใบขนสินค้า
@@ -138,3 +172,4 @@ weight: 41
 - ระบุ Privilege Code ตามสิทธิ์ที่มีขณะนำเข้า เช่น มาตรา 12, WTO, TAU, AFTA เป็นต้น และต้องคำนวณค่าภาษีอากรตามปกติ ที่ส่วนรายการในใบขนสินค้า
 - ระบุ Thai Description of Goods = ชนิดของ ภาษาไทย ตามใบขนสินค้าขาเข้าและรายการในใบขนสินค้าขาเข้าที่นำสินค้าเข้าเก็บในคลังสินค้าทัณฑ์บนที่นำของออก ที่ส่วนรายการในใบขนสินค้า
 - ระบุ English Description of Goods = ชนิดของ ภาษาอังกฤษ ตามใบขนสินค้าขาเข้าและรายการในใบขนสินค้าขาเข้าที่นำสินค้าเข้าเก็บในคลังสินค้าทัณฑ์บนที่นำของออก ที่ส่วนรายการในใบขนสินค้า
+{{< /hint>}}
