--- a/ECS_Academia/content/customs/import-export/export/guide/1.guide.md
+++ b/ECS_Academia/content/customs/import-export/export/guide/1.guide.md
@@ -15,7 +15,7 @@ weight: 19
 ---
 
 
-![](https://github.com/ecs-support/knowledge-center/raw/master/img/cover/export-Customs-clearance-handbook.png)
+![](../img/export-Customs-clearance-handbook.png)
 
 ## เนื้อหา
 
